# NEMEA-SIoT

./: .gitignore  .travis.yml  AutoTest.py  IntegrationTest.py  Makefile.am  README.md  bootstrap.sh  common.sh  configure.ac  install.sh  supervisorl.conf  wsn-anomaly.conf
SIoTpot/: LICENSE  README.rst
TestUtil/: Colors.py  FolderInfo.py  ProgressPrinter.py  RepoScanner.py  SIoTNemeaTester.py  Shell.py  turris-supervisorl-test.conf
beeeon-gateway/: README.md  beeeon-gateway_v2019.6.1-rc1-1_mvebu.ipk  glib2_2.58.3-1_mvebu.ipk  install_gateway.sh  poco-all_1.9.0-all-1_mvebu.ipk
ble-adv-collector/: BLEAdvCollector.cpp  BLEAdvScanner.cpp  BLEAdvScanner.h  Makefile.am  README.md  configure.ac
ble-adv-collector/captures/: 20191001_BeeWi_Passive.csv
ble-adv-scanner/: BLEAdvScanner.cpp  Makefile.am  PyBT_tools.py  README.md  ble_adv_scanner.py  configure.ac
ble-conn-detector/: BLEConnDetector.cpp  BLEConnDetector.h  BLEConnModel.h  Makefile.am  README.md  SimpleStatisticModel.cpp  SimpleStatisticModel.h  configure.ac
ble-conn-detector/tests/: 20191001_BeeWi_ColourChange.0.csv  20191001_BeeWi_ColourChange.out  20191001_BeeWi_LongConn.csv  20191001_BeeWi_LongConn.out  20191001_BeeWi_OFF.csv  20191001_BeeWi_OFF.out  20191001_BeeWi_ON.0.csv  20191001_BeeWi_ON.0.out  20191001_BeeWi_ON.out  20191001_BeeWi_ON_OFF.0.csv  20191001_BeeWi_ON_OFF.out  README  README.md
ble-conn-guard/: BLEConnGuard.cpp  Configuration.h  INIReader.cpp  INIReader.h  Makefile.am  README.md  ble-conn-guard.ini  configure.ac  set-trigger  unset-trigger
ble-conn-guard/tests/: Ignored_device.csv  Ignored_device.out  Monitored_device.0.csv  Monitored_device.out  README.md  Timed_monitoring.0.csv  Timed_monitoring.0.out  Timed_monitoring.out
ble-pairing/: BLEPairingDetector.cpp  BLEPairingDetector.h  Makefile.am  README.md  auto-test.json  configure.ac  fields.c  fields.h
datasets/: README.md  create-data-sets.sh  create-joy-data.sh
hci-collector/: BluetoothHCICollector.cpp  Makefile.am  README.md  configure.ac  fields.c  fields.h
hci-collector/.deps/: ble_hci_collector-BluetoothHCICollector.Po
integration-tests/: example.ini  file  intest.py  siot-supervisor-config.xml  siot_config.xml
lora-airtime/: Makefile.am  README.md  auto-test.json  black_list.c  black_list.h  configure.ac  fields.c  fields.h  lora-airtime.c  lora_detector.c  lora_packet.c
lora-collector/: Makefile.am  README.md  auto-test.json  configure.ac  device_list.c  fields.c  fields.h  lora-collector.c  lora_packet.c  packet.c  packet.h  parson.c  parson.h  util_pkt_logger.c  util_pkt_logger_cesnet.c
lora-distance/: Makefile.am  README.md  auto-test.json  configure  configure.ac  device_list.c  device_list.h  fields.c  fields.h  lora-distance.c  lora_detector_change_distance.c  lora_packet.c  lora_packet.h
lora-replay/: Makefile.am  README.md  auto-test.json  configure  configure.ac  device_list.c  fields.c  fields.h  lora-replay.c  lora_detector_replay_attack_abp.c  lora_packet.c
lora-replay/.deps/: device_list.Po  lora_detector_replay_attack_abp.Po  lora_packet.Po
lora-replay/aes/.deps/: aes.Po
lora-replay/data/: output_01.csv  output_02.csv  output_03.csv
lora-replay/tests/: README.md  data_set_01.csv  data_set_01.out  data_set_02.csv  data_set_02.out  data_set_03.csv  data_set_03.out  replay_attack_ABP.csv  replay_attack_ABP.out
lora-replay/tests-old/: data_set_01.csv  data_set_01.out  data_set_02.csv
nemea/: README.md  install_nemea.sh  nemea-framework_2.1.0-1_mvebu.ipk  nemea-framework_ee8fdfed5a3120e41d507145ac79c56f259ae203-1_mvebu.ipk  nemea-logger_2.10.1-1_mvebu.ipk  nemea-logreplay_2.10.1-1_mvebu.ipk  nemea-logreplay_2.11.0-1_mvebu.ipk  nemea-merger_2.11.0-1_mvebu.ipk  nemea-supervisorl_2.10.1-1_mvebu.ipk
siot-modules/: README.md  install_siot.sh  nemea-ble_hci_collector_389bc53-1_mvebu.ipk  nemea-ble_hci_collector_fd8e489-1_mvebu.ipk  nemea-ble_pairing_389bc53-1_mvebu.ipk  nemea-ble_pairing_fd8e489-1_mvebu.ipk  nemea-lora-airtime_389bc53-1_mvebu.ipk  nemea-lora-airtime_fd8e489-1_mvebu.ipk  nemea-lora-distance_389bc53-1_mvebu.ipk  nemea-lora-distance_fd8e489-1_mvebu.ipk  nemea-lora-replay-abp_389bc53-1_mvebu.ipk  (+14 more)
wsn-anomaly/detector/: Analyzer.cpp  Analyzer.h  ConfigParser.cpp  ConfigParser.h  Conversion.h  DataDetector.cpp  HOWTO.txt  Makefile.am  README.md  configure.ac
wsn-anomaly/detector/.deps/: wsn_anomaly-Analyzer.Po  wsn_anomaly-ConfigParser.Po  wsn_anomaly-DataDetector.Po  wsn_anomaly-fields.Po
zwave-detector/: Makefile.am  README.md  ZWaveDetector.cpp  ZWaveDetector.h  auto-test.json  configure.ac  fields.c  fields.h  test_input.csv
zwave-detector/tests/: README.md  mitm-all-paired-no-alert.0.csv  mitm-all-paired-no-alert.1.csv  mitm.0.out  modification-nl-do-nl-test.0.csv  modification-nl-nl-test.0.csv  modification-nl-node-paired-delayed-no-alert.0.csv  modification-nl-node-paired-delayed-no-alert.1.csv  modification-nl-node-paired-no-alert.1.csv  modification-nl-report-nl.0.csv  modification-nl-report-nl.0.out  modification-sr-cache-backbone-cache-assignment.0.csv  modification-sr-cache-backbone-cache-assignment.1.csv  modification-sr-cache-sr-cache-assignment.0.csv  modification-sr-cache-sr-cache-assignment.0.out  scan-attack-during-pairing-no-alert.0.csv  scan-attack-during-pairing-no-alert.1.csv  scan-attack-get-all.0.csv  scan-attack-get-all.0.out  scan-attack-report-all.0.csv  scan-attack-report-all.0.out  scan-attack-report-all.1.csv
zwave-sdr-collector/: CMakeLists.txt  ZWaveRtlSdr.cpp  ZWaveRtlSdr.h  ZWaveSDRCollector.cpp
zwave-sdr-sniffer/: Makefile.am  README.md  ZWaveRtlSdr.cpp  ZWaveRtlSdr.h  ZWaveSniffer.cpp  configure.ac  fields.c  fields.h
zwave-stats-creator/: Makefile.am  README.md  ZWaveStatistics.cpp  ZWaveStatistics.h  ZWaveStatsCreator.cpp  auto-test.json  configure.ac  fields.c  fields.h
zwave-stats-creator/tests/: 500frames-after-4s-500frames-after-8s.0.csv  500frames-after-4s-500frames-after-8s.0.out  500frames-after-4s-500frames-after-8s.1.out  50x10frames-after-5s.0.csv  50x10frames-after-5s.0.out  50x10frames-after-5s.1.out  README.md
(+346 files in other folders)
