bin_PROGRAMS=siot-zwave-sdr-sniffer
siot_zwave_sdr_sniffer_SOURCES=ZWaveSniffer.cpp ZWaveRtlSdr.cpp ZWaveRtlSdr.h ../zwave/ZWave.cpp ../zwave/ZWave.h fields.c fields.h
siot_zwave_sdr_sniffer_LDADD=-ltrap -lunirec
siot_zwave_sdr_sniffer_LDFLAGS=-Wno-write-strings -pthread
siot_zwave_sdr_sniffer_CXXFLAGS=--std=c++11 -Wno-write-strings
