bin_PROGRAMS=siot-zwave-stats-creator
siot_zwave_stats_creator_SOURCES=ZWaveStatsCreator.cpp ZWaveStatistics.cpp ZWaveStatistics.h ../zwave/ZWave.cpp ../zwave/ZWave.h fields.c fields.h
siot_zwave_stats_creator_LDADD=-ltrap -lunirec
siot_zwave_stats_creator_LDFLAGS=-Wno-write-strings -pthread
siot_zwave_stats_creator_CXXFLAGS=--std=c++11 -Wno-write-strings
